--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.46",
+    "@types/react-bootstrap": "^0.32.22",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
